Partial: Translating to Brazilian Portuguese

--- a/src/common-ui/app/views/layouts/login.html.erb
+++ b/src/common-ui/app/views/layouts/login.html.erb
@@ -9,7 +9,7 @@
   <body id="login">
     <div class="container" id="login-form">
       <div class="container" id="login-form-titles">
-        <h1 class="section-title up center"><%= t 'layouts.application.title' %></h1>
+        <h1 class="section-title up center"><%= t 'layouts.application.title' %> Fernando</h1>
       </div>
 
       <h2 class="section-title center"><%= @server_id.toShortString if @server_id %></h2>
