--- a/src/common-ui/app/views/layouts/partials/_header_actions.html.erb
+++ b/src/common-ui/app/views/layouts/partials/_header_actions.html.erb
@@ -14,7 +14,7 @@
       <%= heading %>
     <% end %>
     <div class="force-middle xs-hide sm-hide md-hide">
-      <img class="mh35" src="/xroad-logo.png">
+      <img class="mh35" src="/xvia-logo.png">
     </div>
     <div id="user" class="cf">
       <div class="button-group"></div>
