Changed logo and favicon

--- a/src/common-ui/app/views/layouts/partials/_header_actions.html.erb
+++ b/src/common-ui/app/views/layouts/partials/_header_actions.html.erb
@@ -1,6 +1,6 @@
 <div id="server-info"
      class="xroad-purple-bg"
-     data-instance="<%= instance_idengit pull xvitifier %>"
+     data-instance="<%= instance_identifier %>"
      data-server-code="<%= server_code %>"
      data-node-name="<%= node_name %>">
   <h1></h1>
