--- a/src/common-ui/app/views/layouts/application.html.erb
+++ b/src/common-ui/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="root_path" content="<%= root_path %>"/>
-    <link href="/favicon.ico" rel="shortcut icon">
+    <link href="/xvia-favicon.ico" rel="shortcut icon">
 
     <%= csrf_meta_tags %>
 
