Login mage margin

--- a/src/common-ui/app/views/layouts/login.html.erb
+++ b/src/common-ui/app/views/layouts/login.html.erb
@@ -7,7 +7,7 @@
     <title><%= t 'layouts.application.title' %></title>
   </head>
   <body id="login">
-    <div class="container" id="login-form">
+    <div class="container" id="login-form" style="margin: -200px auto 0 -200px;">
       <div class="container" id="login-form-titles" style="text-align: center">
         <img src="/xvia-logo-large.png" style="max-width: 100px; margin-bottom: 16px"/>
         <h1 class="section-title up center"><%= t 'layouts.application.title' %></h1>
